--- a/client-app/package.json
+++ b/client-app/package.json
@@ -12,7 +12,9 @@
     "@types/react-dom": "^18.2.4",
     "axios": "^1.4.0",
     "react": "^18.2.0",
+    "react-auth-kit": "^2.12.2",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
